# module_cpp_renderer

./: .gitmodules  CMakeLists.txt  CPPCamera.h  CPPPerspectiveCamera.cpp  CPPPerspectiveCamera.h  CPPRaycastRenderer.cpp  CPPRaycastRenderer.h  Camera.h  PerspectiveCamera.cpp  README.md  Ray.h  RaycastRenderer.cpp  RaycastRenderer.h  Renderer.cpp  Renderer.h  test.ispc  util.cpp  util.h
app/: cpp_imgui_viewer.cpp  cpp_nodes.cpp  cpp_nodes.h  cpp_viewer.cpp  importOBJ_cpp.cpp
camera/: Camera.h  CameraN.h  Perspective.cpp  Perspective.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveN.cpp  PerspectiveN.h
common/: DifferentialGeometry.h  DifferentialGeometryN.h  Ray.h  RayN.h  ScreenSample.h  ScreenSampleN.h  Stream.h  bsimd_impl.h  concurrent_async.h  concurrent_for.cpp  concurrent_for.h  psimd.h  psimd_impl.h  simd.h
common/psimd/detail/: config.h  pack.h
common/psimd/detail/functions/: algorithm.h  math.h  memory.h
common/psimd/detail/operators/: arithmetic.h  bitwise.h  logic.h
geometry/: Geometry.h  TriangleMesh.cpp  TriangleMesh.h
include/boost/simd/detail/: pack_operators.hpp
include/boost/simd/function/: rsqrt.hpp
lights/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h
math/: sampling.h
renderer/: FiberedRenderer.cpp  FiberedRenderer.h  Raycast.cpp  Raycast.h  RaycastRenderer.cpp  Renderer.cpp  Renderer.h  SimdRenderer.cpp  SimdRenderer.h  SimpleAO.cpp  SimpleAO.h  SimpleAORenderer.cpp  StreamRaycast.cpp  StreamRaycast.h  StreamRenderer.cpp  StreamRenderer.h  StreamSimdRenderer.cpp  StreamSimdRenderer.h  StreamSimpleAO.cpp  StreamSimpleAO.h
renderer/raycast/: Raycast.cpp  Raycast.h  SimdRaycast.cpp  SimdRaycast.h  StreamRaycast.cpp  StreamRaycast.h  StreamSimdRaycast.cpp  StreamSimdRaycast.h
renderer/scivis/: SciVis.cpp  SciVis.h  SciVisShadingInfo.h  StreamSciVis.cpp  StreamSciVis.h
renderer/simple_ao/: SimdSimpleAO.cpp  SimdSimpleAO.h  SimpleAO.cpp  SimpleAO.h  StreamSimpleAO.cpp  StreamSimpleAO.h  ao_util.cpp  ao_util.h  ao_util_simd.h
renderer/volume/: DVR.cpp  DVR.h
transferFunction/: LinearTransferFunction.cpp  LinearTransferFunction.h  TransferFunction.cpp  TransferFunction.h
volume/: BlockBrickedVolume.cpp  BlockBrickedVolume.h  GhostBlockBrickedVolume.cpp  GhostBlockBrickedVolume.h  StructuredVolume.cpp  StructuredVolume.h  Volume.cpp  Volume.h
